clang/test/BSC/Negative/Ownership/Borrow/borrow_expr_freeze/borrow_ident_freeze/borrow_ident_freeze.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

void test_freeze_ident1() {
    int a = 1;
    int * borrow c = &mut a;
    // we can modify "a" when c life time is end;
    a = 2;
}

void test_freeze_ident2() {
    int a = 1;
    int * borrow c = &mut a;    // expected-note {{previous borrow is here}}
    a = 2;                      // expected-error {{Can not modify 'a' because be borrowed}}
    int d = *c;
}

void test_freeze_ident2_0() {
    int a = 1;
    int * borrow c = &mut a;    // expected-note {{previous borrow is here}}
    int m = a;                  // expected-error {{Can not read 'a' because be mut borrowed}}
    int d = *c;
}

void test_freeze_ident3() {
    int a = 1;
    int b = 2;
    int * borrow c = &mut a;
    // "c" life time is end at before, and reactivate at after;
    a = 2;
    c = &mut b;
}

void test_freeze_ident4() {
    int a = 1;
    int * borrow c = &mut a;
    int * borrow d = &mut a;    
}

void test_freeze_ident5() {
    int a = 1;
    int * borrow c = &mut a;
    int * borrow d = &mut a;
    int e = *c;
}

void test_freeze_ident6() {
    int a = 1;
    int * borrow c = &mut a;
    int * borrow d = &mut a;
    int e = *d;
}

void test_freeze_ident6_0() {
    int a = 1;
    int * borrow c = &mut a;
    int * borrow d = &mut a;
    int e = *d;
    int f = *c;                 // expected-error {{Can not use 'c' because expired}}
}

void test_freeze_ident6_1() {
    int a = 1;
    int * borrow c = &mut a;
    int * borrow d = &mut a;    // expected-note {{previous borrow is here}}
    int e = *c;                 // expected-error {{There should be at most one mutable borrow targeting to 'a' at the same time}}
    int f = *d;
}

void test_freeze_ident6_2() {
    int a = 1;
    int * borrow c = &mut a;
    int * borrow d = c;          // expected-note {{previous borrow is here}}
    int e = *c;                  // expected-error {{There should be at most one mutable borrow targeting to 'a' at the same time}}
    int f = *d;
}

void use(int * borrow a) {}

void test_freeze_ident6_3() {
    int a = 1;
    int * borrow c = &mut a;
    int * borrow d = c;          // expected-note {{previous borrow is here}}
    int e = *c;                  // expected-error {{There should be at most one mutable borrow targeting to 'a' at the same time}}
    use(d);
}

void test_freeze_ident7() {
    int a = 1;
    int * borrow c = &mut a;
    const int * borrow d = &const a;
}

void test_freeze_ident8() {
    int a = 1;
    int * borrow c = &mut a;
    const int * borrow d = &const a;
    int e = *c;
}

void test_freeze_ident9() {
    int a = 1;
    int * borrow c = &mut a;
    const int * borrow d = &const a;
    int e = *d;
}

void test_freeze_ident10() {
    int a = 1;
    int * borrow c = &mut a;
    const int * borrow d = &const a;
    int b = *d;
    int e = *c;
}

void const_use(const int * borrow a) {};

void test_freeze_ident11() {
    int a = 1;
    int * borrow c = &mut a;            
    const int * borrow d = &const a;    // expected-note {{previous borrow is here}}
    int b = *c;                         // expected-error {{There should be at most one mutable borrow targeting to 'a' at the same time}}
    const_use(d);
}

void test_freeze_ident12() {
    int a = 1;
    const int * borrow c = &const a;
    const int * borrow d = &const a;
    int b = *c;
    int e = *d;
}

void test_freeze_ident13() {
    int a = 1;
    const int * borrow c = &const a;     // expected-note {{previous borrow is here}}
    a = 2;                               // expected-error {{Can not modify 'a' because be borrowed}}
    int b = *c;
}

int test_freeze_ident14(){
  int a = 1;
  int b = 2;
  int *c, *d;
  c = &a;
  d = &b;
  int * borrow e = &mut *c;
  int m = *d;
  use(e);
  return 0;
}

int test_freeze_ident15(int * borrow m){
  int a = 1;
  int b = 2;
  int *c, *d;
  c = &a;
  d = &b;
  int * borrow e = &mut *c;
  int * borrow f = &mut *c;         // expected-note {{previous borrow is here}}
  int g = f == e ? *f : *e;         // expected-error {{There should be at most one mutable borrow targeting to 'c' at the same time}}
  use(f);
  use(e);                           // expected-error {{Can not use 'e' because expired}}
  return 0;
}

struct S {
  int a;
  int * borrow b;
};

void test_freeze_ident17(){
    int a = 1;
    int *owned b = (int *owned)&a;
    int *borrow c = &mut *b;
    int *d = (int *)b;
}

void test_freeze_ident18(){
    int a = 1;
    int *owned b = (int *owned)&a;
    int *borrow c = &mut *b;               // expected-note {{previous borrow is here}}
    int *d = (int *)b;                     // expected-error {{Can not read 'b' because be mut borrowed}}
    use(c);
}

void test_freeze_ident19(){
    int a = 1;
    int *owned b = (int *owned)&a;
    int *borrow c = &mut *b;               // expected-note {{previous borrow is here}}
    int *owned d = b;                      // expected-error {{Can not modify 'b' because be borrowed}}         
    use(c);
    int *e = (int *)d;
}

void test_freeze_ident20(){
    int a = 1;
    int *owned b = (int *owned)&a;
    const int *borrow c = &const *b;       // expected-note {{previous borrow is here}}
    int *owned d = b;                      // expected-error {{Can not modify 'b' because be borrowed}}         
    const_use(c);
    int * e = (int *)d;
}

owned struct F
{
  public:
    int a;
};

void owend_struct_use1(F *borrow b){}

void test_freeze_ident21(){
    F f = {1};
    F *borrow b = &mut f;           // expected-note {{previous borrow is here}}
    F k = f;                        // expected-error {{Can not modify 'f' because be borrowed}}  
    owend_struct_use1(b);
}

void owend_struct_use2(const F *borrow b){}

void test_freeze_ident22(){
    F f = {1};
    const F *borrow b = &const f;       // expected-note {{previous borrow is here}}
    F k = f;                            // expected-error {{Can not modify 'f' because be borrowed}}
    owend_struct_use2(b);
}

struct H
{
    int *owned a;
    int b;
};

void owend_struct_use3(struct H *borrow b){}

void test_freeze_ident23(){
    int a = 1;
    struct H h = {(int *owned)&a, 2};
    struct H *borrow b = &mut h;        // expected-note {{previous borrow is here}}
    struct H g = h;                     // expected-error {{Can not modify 'h' because be borrowed}}
    owend_struct_use3(b);
    int *c = (int *)g.a;
}

void owend_struct_use4(const struct H *borrow b){}

void test_freeze_ident24(){
    int a = 1;
    struct H h = {(int *owned)&a, 2};
    const struct H * borrow b = &const h;   // expected-note {{previous borrow is here}}
    struct H g = h;                         // expected-error {{Can not modify 'h' because be borrowed}}
    owend_struct_use4(b);
    int *c = (int *)g.a;
}

void test_freeze_ident25(){
    int a = 1;
    int *borrow p1 = &mut a;  // expected-note {{previous borrow is here}}
    a = 5;   // expected-error {{Can not modify 'a' because be borrowed}}
    int *borrow p2 = p1;
}

void test_freeze_ident26(){
    int a = 1;
    int *owned b = (int *owned)&a;
    int *borrow p1 = &mut *b;   // expected-note {{previous borrow is here}}
    int *d = (int *)b;   // expected-error {{Can not read 'b' because be mut borrowed}}
    int *borrow p2 = p1;
}

void test_freeze_ident27(){
    int a = 1;
    int *owned b = (int *owned)&a;
    int *borrow p1 = &mut *b;
    int *borrow p2 = p1; // expected-note {{previous borrow is here}}
    int *d = (int *)b;   // expected-error {{Can not read 'b' because be mut borrowed}}
    use(p2);
}

void test_freeze_ident28(){
    int a = 1;
    int *owned b = (int *owned)&a;
    int *borrow p1 = &mut *b;   // expected-note {{previous borrow is here}}
    int *d = (int *)b;   // expected-error {{Can not read 'b' because be mut borrowed}}
    int *borrow p2 = p1;   // expected-note {{previous borrow is here}}  expected-note {{previous borrow is here}}
    b = (int *owned)&a;  // expected-error {{Can not modify 'b' because be borrowed}}
    d = (int *)b;   // expected-error {{Can not read 'b' because be mut borrowed}}
    use(p2);
}

void test_freeze_ident29(){
    int a = 1;
    int *borrow p1 = &mut a;   // expected-note {{previous borrow is here}}
    int *borrow p2 = &mut a;
    a = 5;   // expected-error {{Can not modify 'a' because be borrowed}}
    p2 = p1;
}

void test_freeze_ident30(){
    int local = 5;
    int *borrow p = &mut local;  // expected-note {{previous borrow is here}}
    use(&mut local);  // expected-error {{Can not modify 'local' because be borrowed}}
    use(p);
}